--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,13 +1,15 @@
 .app {
   display: flex;
   color: black;
+  /* background: white/90; */
 }
 
 .sidebar-section {
-  width: 300px;
-  /* background-color: #f8f9fa; */
+  width: 25%;
+  min-height: screen;
+  background-color: #644536;
   border-right: 1px solid #ddd;
-  padding: 20px;
+  padding: 1.5rem;
 }
 
 .main-section {
@@ -22,14 +24,14 @@
 .expandable-label {
   /* font-weight: bold; */
   cursor: pointer;
-  padding: 5px;
-  background-color: #e0e0e0;
-  margin-bottom: 5px;
+  /* padding: 5px; */
+  /* background-color: #e0e0e0; */
+  /* margin-bottom: 5px; */
   border-radius: 4px;
 }
 
 .expandable-content {
-  padding-left: 20px;
+  padding-left: 1rem;
 }
 
 .no-sub-godowns, .no-items {
@@ -42,24 +44,15 @@
 }
 
 .item-details {
-  padding: 20px;
-  background-color: #f5f5f5;
+  padding: 1rem;
+  background-color: white;
   border-radius: 8px;
 }
 
-.item-details h1 {
-  margin-bottom: 10px;
-}
 
 .item-details img {
-  max-width: 200px;
-  margin-bottom: 10px;
+  /* min-width:50%; */
 }
-
-.item-details p, .item-details ul {
-  margin: 5px 0;
-}
-
 .item-details ul {
   list-style: none;
   padding-left: 0;
